Geometry Nodes: The Attribute Combine XYZ and Separate XYZ nodes don't work on instanced geometry #85963

Closed
opened 2021-02-24 21:16:13 +01:00 by Leon Schittek · 8 comments
Member

System Information
Operating system: Darwin-18.7.0-x86_64-i386-64bit 64 Bits
Graphics card: Intel Iris OpenGL Engine Intel Inc. 4.1 INTEL-12.10.16

Blender Version
Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-02-23 23:15, hash: b2c7ea6d82
Worked: -

Short description of error
The Attribute Combine XYZ and Attribute Separate XYZ node have no affect on instanced geometry.

attribute-x-y-z_not-working-instances.mp4

Exact steps for others to reproduce the error
Open the provided .blend file and try setup 2 and 3.
attribute-combine-xyz.blend

Reproduce from startup file:

  • Add a second mesh to the scene.
  • Add a geometry nodes modifier to the default cube and instance geometry on it with the point separate node.
  • Try accessing/modifying the position attributes of the instances with the Attribute Combine/Separate XYZ nodes.
**System Information** Operating system: Darwin-18.7.0-x86_64-i386-64bit 64 Bits Graphics card: Intel Iris OpenGL Engine Intel Inc. 4.1 INTEL-12.10.16 **Blender Version** Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-02-23 23:15, hash: `b2c7ea6d82` Worked: - **Short description of error** The Attribute Combine XYZ and Attribute Separate XYZ node have no affect on instanced geometry. [attribute-x-y-z_not-working-instances.mp4](https://archive.blender.org/developer/F9835914/attribute-x-y-z_not-working-instances.mp4) **Exact steps for others to reproduce the error** Open the provided .blend file and try setup 2 and 3. [attribute-combine-xyz.blend](https://archive.blender.org/developer/F9835928/attribute-combine-xyz.blend) Reproduce from startup file: - Add a second mesh to the scene. - Add a geometry nodes modifier to the default cube and instance geometry on it with the point separate node. - Try accessing/modifying the position attributes of the instances with the Attribute Combine/Separate XYZ nodes.
Author
Member

Added subscriber: @lone_noel

Added subscriber: @lone_noel
Member

Added subscriber: @CharlieJolly

Added subscriber: @CharlieJolly
Member

I think it's missing geometry_set = geometry_set_realize_instances(geometry_set); from the exec function but that's just a guess.

See: P1987

I think it's missing `geometry_set = geometry_set_realize_instances(geometry_set);` from the exec function but that's just a guess. See: [P1987](https://archive.blender.org/developer/P1987.txt)
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Hans Goudey self-assigned this 2021-02-24 22:13:55 +01:00
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Indeed, that's it. I can commit a fix in a moment.

Indeed, that's it. I can commit a fix in a moment.

This issue was referenced by 17260c9b9a

This issue was referenced by 17260c9b9a2c591e5269b5025f884630f7aa66c6
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#85963
No description provided.