Fix T85963: Combine and separate XYZ nodes don't work on instances

They were missing the `geometry_set_realize_instances` function used to
make any input instances real for writing.